--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script>
     window.$docsify = {
       name: '',
-      repo: 'https://github.com/de-cheng/blockchainlittlebook.com',
+      repo: 'https://github.com/de-cheng/decheng.xyz',
       ga: 'UA-151199059-1',
       noEmoji: true,
       loadNavbar: true,
