--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       noEmoji: true,
       
       loadNavbar: true,
-      coverpage: false,
+      coverpage: true,
       onlyCover: false,
       
       search: 'auto',
