--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       maxAge: 86400000, // Expiration time, the default one day
       paths: [
         '/',
-        '/cn/',            // => /README.md
+        '/boxgroup/',            // => /README.md
         '/en/',      // => /en/README.md
       ], // or 'auto'
 
